--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VITE_APP_URL=
-VITE_GET_SCHEDULE_URL=
+VITE_APP_URL=http://localhost:5173
+VITE_GET_SCHEDULE_URL="${VITE_APP_URL}/get_schedule.json"
